finished lab and all tests pass

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        self.name = name\n",
+    "        self.size = None\n",
+    "        self.size = None\n",
+    "        self.weight = weight\n",
+    "        self.species = None\n",
+    "        self.food_type = None\n",
+    "        self.nocturnal = False\n",
+    "        \n",
+    "    def sleep(self):\n",
+    "        if self.nocturnal:\n",
+    "            print(\"I sleep during the day.\")\n",
+    "        else:\n",
+    "            print(\"I sleep at night.\")\n",
+    "        \n",
+    "    def eat(self, food):\n",
+    "        if food == 'plants':\n",
+    "            if self.food_type == 'carnivore':\n",
+    "                print(\"I don't eat this!\")\n",
+    "            else:\n",
+    "                print(f\"{self.name} the {self.species} thinks {food} is yummy!\")\n",
+    "        else:\n",
+    "            if self.food_type == 'herbivore':\n",
+    "                print(\"I don't eat this!\")\n",
+    "            else:\n",
+    "                print(f\"{self.name} the {self.species} thinks {food} is yummy!\") \n",
+    "                \n",
+    "        "
    ]
   },
   {
@@ -72,12 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'elephant'\n",
+    "        self.size = 'enormous'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False\n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -95,12 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'tiger'\n",
+    "        self.size = 'large'\n",
+    "        self.food_type = 'carnivore'\n",
+    "        self.nocturnal = True\n",
+    "        \n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -118,12 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Raccoon(Animal):\n",
-    "    pass"
+    "class Racoon(Animal):\n",
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'racoon'\n",
+    "        self.size = 'small'\n",
+    "        self.food_type = 'omnivore'\n",
+    "        self.nocturnal = True\n",
+    "        "
    ]
   },
   {
@@ -141,12 +193,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species = 'gorilla'\n",
+    "        self.size = 'large'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False\n",
+    "        "
    ]
   },
   {
@@ -176,12 +235,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    pass"
+    "    zoo = zoo\n",
+    "    if animal_type == 'Elephant':\n",
+    "        new_animal = Elephant(name, weight)\n",
+    "    elif animal_type == 'Tiger':\n",
+    "        new_animal = Tiger(name, weight)\n",
+    "    elif animal_type == 'Racoon':\n",
+    "        new_animal = Racoon(name, weight)\n",
+    "    else: \n",
+    "        new_animal = Gorilla(name, weight)\n",
+    "    zoo.append(new_animal)\n",
+    "    return zoo"
    ]
   },
   {
@@ -200,11 +270,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Elephant at 0x105b1fe80>,\n",
+       " <__main__.Elephant at 0x105b1ffd0>,\n",
+       " <__main__.Racoon at 0x105b1fc50>,\n",
+       " <__main__.Racoon at 0x105b1f2b0>,\n",
+       " <__main__.Gorilla at 0x105b1fd68>,\n",
+       " <__main__.Tiger at 0x105b1ff98>,\n",
+       " <__main__.Tiger at 0x105b1f780>,\n",
+       " <__main__.Tiger at 0x105b1d358>]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create your animals and add them to the 'zoo' in this cell!"
+    "# Create your animals and add them to the 'zoo' in this cell!\n",
+    "zoo = []\n",
+    "add_animal_to_zoo(zoo, 'Elephant','Petunia', 2000)\n",
+    "add_animal_to_zoo(zoo, 'Elephant','Fred', 2500)\n",
+    "add_animal_to_zoo(zoo, 'Racoon','Rocket', 30)\n",
+    "add_animal_to_zoo(zoo, 'Racoon','Sly', 40)\n",
+    "add_animal_to_zoo(zoo, 'Gorilla','Coco', 1000)\n",
+    "add_animal_to_zoo(zoo, 'Tiger','Tigger', 500)\n",
+    "add_animal_to_zoo(zoo, 'Tiger','Lulu', 400)\n",
+    "add_animal_to_zoo(zoo, 'Tiger','Tak', 450)"
    ]
   },
   {
@@ -226,12 +323,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    pass"
+    "    if time == 'Day':\n",
+    "         for animal in zoo:\n",
+    "                if animal.nocturnal == False:\n",
+    "                    if animal.food_type == 'carnivore':\n",
+    "                        animal.eat('meat')\n",
+    "                    else:\n",
+    "                        animal.eat('plants')\n",
+    "    if time == 'Night':  \n",
+    "        for animal in zoo:\n",
+    "            if animal.nocturnal == True:\n",
+    "                if animal.food_type == 'carnivore':\n",
+    "                    animal.eat('meat')\n",
+    "                else:\n",
+    "                    animal.eat('plants')            \n",
+    "                    "
    ]
   },
   {
@@ -243,10 +354,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I sleep at night.\n",
+      "I sleep at night.\n",
+      "I sleep during the day.\n",
+      "I sleep during the day.\n",
+      "I sleep at night.\n",
+      "I sleep during the day.\n",
+      "I sleep during the day.\n",
+      "I sleep during the day.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for animal in zoo:\n",
+    "    animal.sleep()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Petunia the elephant thinks plants is yummy!\n",
+      "Fred the elephant thinks plants is yummy!\n",
+      "Coco the gorilla thinks plants is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,10 +407,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rocket the racoon thinks plants is yummy!\n",
+      "Sly the racoon thinks plants is yummy!\n",
+      "Tigger the tiger thinks meat is yummy!\n",
+      "Lulu the tiger thinks meat is yummy!\n",
+      "Tak the tiger thinks meat is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo, 'Night')"
+   ]
   },
   {
    "cell_type": "markdown",
